# Ultra_AI_Project

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_REPORT.md  GUI_USER_GUIDE.md  MODEL_SETUP_GUIDE.md  PRODUCTION_GUIDE.md  README.md  adaptive_learning_system.py  check_files.sh  context_optimization_test.py  docker-compose.yml  full_model_test.py  launch_complete_ultra_ai.sh  launch_ultra_ai.sh  memory_system_test.py  models.json  pyproject.toml  quick_model_test.py  requirements-dev.txt  requirements.txt  requirements_minimal.txt  setup.py  simple_ultra_ai.py  start.sh  start_gui.sh  start_ultra.sh  start_ultra_recall.sh  stop_ultra.sh  system_config.py  system_utilities.py  termux_api.py  termux_api_test.py  test_final.py  test_model_loading.py  test_simple.py  test_working.py  ultra_ai.py  ultra_ai_complete.py  ultra_ai_futuristic.py  (+5 more)
.claude/agents/: work-validator.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: ai_models.yaml  database.yaml  logging.yaml  settings.yaml
docs/: API.md  ARCHITECTURE.md  INSTALLATION.md
external_tools/: termux_api_commands.txt
scripts/: cleanup.sh  download_models.sh  install_dependencies.sh  start_system.sh  stop_system.sh
src/: __init__.py  main.py
src/agents/: __init__.py  analysis_agent.py  base_agent.py  code_agent.py  creative_agent.py  research_agent.py
src/ai/: chat_ai.py  command_processor.py  context_provider.py  dynamic_memory_layers.py  gguf_ai.py  memory_system.py  production_ai.py  storage_ai.py  ultra_recall.py
src/api/: __init__.py  auth.py  middleware.py  models.py  routes.py  websocket.py
src/core/: __init__.py  memory_manager.py  security.py  system_manager.py  task_coordinator.py
src/integrations/: termux_integration.py
src/models/: __init__.py  audio_models.py  llm_interface.py  model_manager.py  types.py  vision_models.py
src/tools/: __init__.py  base_tool.py  simple_tools.py
src/ui/: __init__.py  cli_interface.py  dashboard.py  web_interface.py
src/utils/: __init__.py  data_processor.py  file_handler.py  helpers.py  logger.py
src/voice/: voice_activation.py
tests/: __init__.py  test_agents.py  test_api.py  test_system.py
